// Copyright 2019 Google LLC
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// http://www.apache.org/licenses/LICENSE-2.0
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.google.cloud.gzos.pb";
option java_outer_classname = "Schema";

package com.google.cloud.gzos.pb;

message Field {
  enum FieldType {
    UNKNOWN = 0;
    STRING = 1;
    INTEGER = 2;
    DECIMAL = 3;
    DATE = 4;
    UNSIGNED_INTEGER = 5;
    LATIN_STRING = 6;
  }
  string name = 1;
  FieldType typ = 2;
  int32 size = 3;
  int32 precision = 4;
  int32 scale = 5;
  bool filler = 6;
  message NullIf {
    string field = 1;
    bytes value = 2;
  }
  NullIf nullif = 7;
  FieldType cast = 8;
  string format = 9;
}
message Record {
  enum Source {
    UNKNOWN = 0;
    COPYBOOK = 1;
    LAYOUT = 2;
  }
  int32 lrecl = 1;
  Source source = 2;
  string original = 3;
  repeated Field field = 4;
  string encoding = 5;
  bool vartext = 6;
  bytes delimiter = 7;
}
